# qdrant-mcp

./: pyproject.toml
src/qdrant_mcp/: qdrant_memory.py  settings.py
src/qdrant_mcp/embeddings/: openai.py
